[project]
name = "<project_name>"
version = "0.1.0"
description = "<Library Description>"
authors = [
    {name = "<author_name>", email = "<author_email>"},
]
dependencies = [
    "pyspark>=3.1.1",
]
requires-python = ">=3.7.16"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
